--- a/clinic-frontend/src/styles.scss
+++ b/clinic-frontend/src/styles.scss
@@ -50,6 +50,11 @@ strong {
 
 .card-title {
     font-size: 1.2rem;
+    font-weight: 700;
+}
+
+.card-text {
+    font-weight: 300;
 }
 
 .action-card-strip {
